kube/mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  ports:
    - port: 3306
  selector:
    app: mysql
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
spec:
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - image: mysql:8.0
          name: mysql
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: blog-storage
              mountPath: /var/lib/mysql
              subPath: mysql_data
            - name: blog-storage
              mountPath: /etc/mysql/conf.d
              subPath: mysql_config.d
      volumes:
        - name: blog-storage
          persistentVolumeClaim:
            claimName: blog-data
